# base-agent

./: .gitignore  AGENTS.md  BLUEPRINT.spec.yaml  BLUEPRINT.yaml  Cargo.toml  README.md  pyproject.toml  run_api_server.py  task
codex-test/: codex_client.py  codex_test.py
src/: .env.example  BLUEPRINT.spec.yaml  BLUEPRINT.yaml  __init__.py  agent.py
src-go/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  agent.go  config.go  go.mod  helpers.go  result.go
src-go/api/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  exports.go  handlers.go  server.go
src-go/debug_cli/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml
src-go/llm/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  codex_adapter.go  gemini_adapter.go  opus_adapter.go  rotation.go  router.go  types.go
src-rs/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  Cargo.toml  agent.rs  config.rs  helpers.rs  lib.rs  result.rs
src-rs/api/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  handlers.rs  lib.rs  server.rs
src-rs/debug_cli/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  Cargo.toml
src-rs/debug_cli/src/: cli.rs  client.rs  main.rs  models.rs  render.rs  repl.rs
src-rs/llm/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  codex_adapter.rs  gemini_adapter.rs  lib.rs  opus_adapter.rs  rotation.rs  router.rs  types.rs
src-rs/task/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  lib.rs  store.rs  types.rs
src-rs/tools/: BLUEPRINT.spec.yaml  BLUEPRINT.yaml  lib.rs  registry.rs  types.rs
tests/: conftest.py  test_agent.py  test_api_server.py  test_debug_cli.py  test_live_models.py  test_llm.py  test_model_policy.py  test_snapshot_imports.py  test_task.py  test_tools.py
(+154 files in other folders)
