[package]
name = "base_agent_rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[[bin]]
name = "base-agent"
path = "bin/base-agent.rs"

[dependencies]
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
